# EasyTensor

./: .gitignore  CMakeLists.txt  README.md
include/: etc.hh  operations.hh  tensor.hh
src/: etc.cc  etc.cpp  main.cc  operations.cc  tensor.cc  vizualizer.cc
tests/: test_etc.cc  test_main.cc  test_operations.cc  test_tensor.cc
